# neodoc-luals-definition-gen

./: .gitignore  .luarc.json.example  Cargo.toml  README.md
generated-definitions/: _custom.lua  addonchecker.lua  appearance.lua  armor.lua  awards.lua  bind.lua  classbuilder.lua  clgamemodemenu.lua  clgmmenu.lua  clgmsubmenu.lua  clscore.lua  clscoremenu.lua  corpse.lua  credits.lua  cvars.lua  database.lua  disguise.lua  dmgindicator.lua  door.lua  draw.lua  drawsc.lua  ent.lua  entity.lua  entityoutputs.lua  ents.ttt.lua  entspawn.lua  entspawnscript.lua  epop.lua  event.lua  eventdata.lua  events.lua  fileloader.lua  fonts.lua  game.lua  gm.lua  helpscrn.lua  hud.lua  hudeditor.lua  hudelement.lua  hudelements.lua  (+51 more)
src/: main.rs  neodoc_parser.rs
templates/: lua_func_definition.lua.j2
